WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129125
FTL may not see a compact_unwind section if there weren't any stackmaps
https://bugs.webkit.org/show_bug.cgi?id=129125
Summary
FTL may not see a compact_unwind section if there weren't any stackmaps
Filip Pizlo
Reported
2014-02-20 15:45:17 PST
It's theoretically possible for there to not be any stackmaps, so we should guard against it.
Attachments
the patch
(5.14 KB, patch)
2014-02-20 15:47 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
llvm patch
(6.77 KB, patch)
2014-02-20 15:48 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-02-20 15:47:57 PST
Created
attachment 224805
[details]
the patch
Filip Pizlo
Comment 2
2014-02-20 15:48:26 PST
Created
attachment 224806
[details]
llvm patch
Geoffrey Garen
Comment 3
2014-02-20 15:53:47 PST
Comment on
attachment 224805
[details]
the patch r=me
Filip Pizlo
Comment 4
2014-02-20 15:55:05 PST
Landed in
http://trac.webkit.org/changeset/164456
Filip Pizlo
Comment 5
2014-02-20 16:03:43 PST
LLVM side of this landed in
http://llvm.org/viewvc/llvm-project?view=revision&revision=201826
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug