FTL may not see a compact_unwind section if there weren't any stackmaps https://bugs.webkit.org/show_bug.cgi?id=129125

Reviewed by Geoffrey Garen.

It's OK to not have an unwind section, so long as the function also doesn't have any
OSR exits.

* ftl/FTLCompile.cpp:
(JSC::FTL::fixFunctionBasedOnStackMaps):
(JSC::FTL::compile):
* ftl/FTLUnwindInfo.cpp:
(JSC::FTL::UnwindInfo::parse):
* ftl/FTLUnwindInfo.h:



Canonical link: https://commits.webkit.org/147164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164456 268f45cc-cd09-0410-ab3c-d52691b4dbfc