Source/JavaScriptCore/ftl/FTLUnwindInfo.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2013, 2014 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -37,7 +37,7 @@ struct UnwindInfo {
     UnwindInfo();
     ~UnwindInfo();
     
-    void parse(void*, size_t, GeneratedFunction);
+    bool parse(void*, size_t, GeneratedFunction);
     
     void dump(PrintStream&) const;
     
